# bspt

./: CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh
.github/workflows/: build.yml
docs/: FEATURES.md
mock/: Dockerfile  README.md  docker-compose.yml  requirements.txt  run.sh
mock/responses/: display_device.txt  display_version.txt
mock/vrp_mock/: __init__.py  pagination.py  server.py  session.py  telnet.py
mock/vrp_mock/commands/: __init__.py  display.py  registry.py  system.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: CLAUDE.md  lib.rs  main.rs  reconnect.rs  ringbuffer.rs  session.rs  ssh.rs  telnet.rs  tracer.rs  vrp.rs
src/components/: CLAUDE.md  ThemeControls.tsx
src/components/CommandBar/: ClipboardHistoryDropdown.tsx  CommandBar.tsx  QuickCommandButton.tsx  index.ts
src/components/Panel/: FlowPanel.tsx  TraceNode.tsx  index.ts
src/components/Sidebar/: AddDeviceInputs.tsx  DeviceTree.tsx  ParseConfirmDialog.tsx  QuickAddInput.tsx  SessionTree.tsx  TreeContextMenu.tsx  index.ts
src/components/Terminal/: Block.tsx  BlockGutter.tsx  BlockTerminal.tsx  (+11 more)
src/hooks/: CLAUDE.md  index.ts  useCollapsedRanges.ts  useGutterSync.ts  useKeywordHighlighter.ts  useTerminalPool.ts
src/stores/: CLAUDE.md  blockStore.ts  commandBarStore.ts  deviceTreeStore.ts  sessionStore.ts  sessionTreeStore.ts  tabStore.ts  themeStore.ts  tracerStore.ts
src/types/: CLAUDE.md  session.ts
src/utils/: blockDetector.ts  connectionParser.ts  index.ts  vscode.ts
