[package]
name = "bspt"
version = "0.1.0"
description = "A modern terminal for BSP developers"
authors = ["you"]
edition = "2021"

[lib]
name = "bspt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.44"
russh-keys = "0.44"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.5"

